# Pathway-Builder

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run_bdnf_enrichment.py
.github/workflows/: ci.yml
R/: CU25_bdnf_axis_stats.R
data/: toy_bulk_counts.tsv  toy_sample_info.csv  vst_norm_counts_CU25.csv  zhang_sample_info.csv
docs/: README_RUN.md  example_notebook.ipynb  examples.md
env/: scanpy_env.yml
genes/: mouse_bdnf_mature_trkb_gene_list_full_annotated_sources.csv  toy_pathway.csv
pathway_builder/: __init__.py  cli.py  core.py  report.py
prompts/: weighted_gene_list_prompt.md
reports/: codex_review.md
scripts/: check_bulk.py  check_sc.py  check_smoke_deps.py  gen_sc_toy.py  prepare_release.sh  run_bdnf_zhang2024.sh
tests/: test_bulk_report.py  test_bulk_scoring.py  test_cli_entrypoint.py  test_core_utils.py  test_singlecell_scoring.py
